fix: overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,6 +141,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
     background-blend-mode: screen;
   }
 
